--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "1.0.0",
+  "proxy": "http://localhost:5000",
   "description": "",
   "main": "server.js",
   "scripts": {
